[package]
name          = "neutrino-node"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = []

[lints]
workspace = true

[[bin]]
name = "neutrino-node"
path = "src/main.rs"

[dependencies]
async-trait                       = "0.1.89"
borsh.workspace                   = true
neutrino-consensus-engine.workspace = true
neutrino-consensus-fork-choice.workspace = true
neutrino-consensus-types.workspace  = true
neutrino-crypto.workspace           = true
neutrino-default-runtime-core.workspace = true
neutrino-mempool.workspace        = true
neutrino-network.workspace        = true
neutrino-primitives.workspace     = true
neutrino-proof-system.workspace   = true
neutrino-rpc.workspace            = true
neutrino-runtime-abi.workspace    = true
neutrino-runtime-host.workspace   = true
sp1-sdk                           = { workspace = true }
neutrino-storage                  = { workspace = true, features = ["rocksdb"] }
neutrino-sync.workspace           = true
neutrino-trie.workspace           = true
serde                             = { version = "1.0", features = ["derive"] }
thiserror.workspace               = true
tokio                             = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs"] }
toml                              = "0.8.20"
tracing                           = "0.1.44"
tracing-subscriber                = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tokio                 = { version = "1.52.3", features = ["full", "test-util"] }
ed25519-dalek         = { workspace = true }
neutrino-runtime-core = { workspace = true, features = ["host"] }
rand_chacha           = { workspace = true }
rand_core             = { workspace = true }
