[package]
name          = "neutrino-primitives"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = ["blake3/std", "borsh/std"]

[dependencies]
blake3 = { workspace = true }
borsh  = { workspace = true }

[lints]
workspace = true
