[package]
name          = "neutrino-proof-system"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = [
    "neutrino-primitives/std",
    "neutrino-consensus-types/std",
    "neutrino-runtime-abi/std",
    "neutrino-trie/std",
    "borsh/std",
]

[dependencies]
neutrino-consensus-types = { workspace = true }
neutrino-primitives      = { workspace = true }
neutrino-runtime-abi     = { workspace = true }
neutrino-trie            = { workspace = true }
borsh                    = { workspace = true }

[lints]
workspace = true
