[package]
name          = "neutrino-prover-block"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = []

[dependencies]
p3-air         = { workspace = true }
p3-baby-bear   = { workspace = true }
p3-challenger  = { workspace = true }
p3-commit      = { workspace = true }
p3-dft         = { workspace = true }
p3-field       = { workspace = true }
p3-fri         = { workspace = true }
p3-matrix      = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-symmetric   = { workspace = true }
p3-uni-stark   = { workspace = true }
# Workspace rand is 0.10. SmallRng (used to seed Poseidon2 permutation
# constants for Plonky3's `new_from_rng_128`) lives at
# `rand::rngs::SmallRng` under the default feature set.
rand           = { workspace = true }

[lints]
workspace = true
