[package]
name          = "neutrino-rpc"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = []

[dependencies]
neutrino-primitives       = { workspace = true }
neutrino-consensus-types  = { workspace = true }
neutrino-runtime-abi      = { workspace = true }
async-trait               = { workspace = true }
borsh                     = { workspace = true }
hex                       = { workspace = true }
jsonrpsee                 = { workspace = true }
serde                     = { workspace = true }
serde_json                = { workspace = true }
thiserror                 = { workspace = true }
tokio                     = { workspace = true }
tracing                   = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "test-util"] }

[lints]
workspace = true
