[package]
name          = "neutrino-runtime-abi"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = ["neutrino-primitives/std", "parity-scale-codec/std"]

[dependencies]
neutrino-primitives = { workspace = true }
parity-scale-codec  = { workspace = true }

[lints]
workspace = true
