[package]
name          = "neutrino-runtime-host"
description   = "SP1 prover/verifier host for the Neutrino runtime."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = { workspace = true }
publish       = { workspace = true }

[lib]

# SP1 is a hard environment dependency of Neutrino: every contributor and
# every CI runner installs the `succinct` rustup toolchain via `sp1up`
# before `cargo build --locked`. The guest ELF build is always wired in;
# there is no feature flag to disable it. See `AGENTS.md` and
# `docs/design/13-sp1-runtime-proof-rewrite.md` for the rationale.

[dependencies]
sp1-sdk                       = { workspace = true }
borsh                         = { workspace = true }
bincode                       = { workspace = true }
blake3                        = { workspace = true }
thiserror                     = { workspace = true }
neutrino-default-runtime-core = { workspace = true }
neutrino-runtime-core         = { workspace = true, features = ["host"] }
neutrino-runtime-abi          = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }

[dev-dependencies]
neutrino-default-runtime-master = { workspace = true }

[lints]
workspace = true
