[package]
name          = "neutrino-runtime-host"
description   = "SP1 prover/verifier host plus WASM dynamic runtime host for the Neutrino runtime."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = { workspace = true }
publish       = { workspace = true }

[lib]

# SP1 is a hard environment dependency of Neutrino: every contributor and
# every CI runner installs the `succinct` rustup toolchain via `sp1up`
# before `cargo build --locked`. The guest ELF and the master WASM are
# both compiled by `build.rs`.

[dependencies]
sp1-sdk                       = { workspace = true }
wasmtime                      = { workspace = true }
borsh                         = { workspace = true }
bincode                       = { workspace = true }
blake3                        = { workspace = true }
thiserror                     = { workspace = true }
neutrino-default-runtime-core = { workspace = true }
neutrino-runtime-core         = { workspace = true, features = ["host"] }
neutrino-runtime-abi          = { workspace = true }
neutrino-primitives           = { workspace = true }
neutrino-proof-system         = { workspace = true }
neutrino-consensus-types      = { workspace = true }
neutrino-trie                 = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }

[dev-dependencies]
neutrino-default-runtime-master = { workspace = true }
ed25519-dalek                   = { workspace = true }
rand_core                       = { workspace = true }
rand_chacha                     = { workspace = true }

[lints]
workspace = true
