[package]
name          = "neutrino-storage"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = []
rocksdb = ["std", "dep:rocksdb"]

[dependencies]
rocksdb = { workspace = true, optional = true }

[lints]
workspace = true
