[package]
name          = "neutrino-sync"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = []

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
borsh.workspace = true
neutrino-consensus-types.workspace = true
neutrino-network.workspace = true
neutrino-primitives.workspace = true
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full", "test-util"] }
tracing-subscriber = "0.3.23"
