[package]
name          = "neutrino-trie"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = ["neutrino-primitives/std", "borsh/std"]

[dependencies]
neutrino-primitives = { workspace = true }
borsh               = { workspace = true }

[dev-dependencies]
# Trie tests use rand_chacha (rand_core 0.6 compatible) for
# deterministic randomised insertion / proof checks.
rand_chacha         = { workspace = true }
rand_core           = { workspace = true }

[lints]
workspace = true
