[package]
name          = "neutrino-default-runtime"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = []

[dependencies]
neutrino-runtime-sdk = { workspace = true, default-features = false }

[lints]
workspace = true
