[package]
name          = "neutrino-default-runtime-core"
description   = "Default-runtime STF logic. Compiles to native, wasm32-unknown-unknown, and riscv32im-succinct-zkvm-elf."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = { workspace = true }
publish       = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
blake3                = { workspace = true }
borsh                 = { workspace = true }
ed25519-dalek         = { workspace = true }
neutrino-runtime-core = { workspace = true }
neutrino-runtime-abi  = { workspace = true }
neutrino-primitives   = { workspace = true }

[dev-dependencies]
neutrino-runtime-core = { workspace = true, features = ["host"] }
rand_core             = { workspace = true }
rand_chacha           = { workspace = true }

[lints]
workspace = true
