[package]
name          = "neutrino-default-runtime-master"
description   = "Default-runtime master binary. Built for wasm32-unknown-unknown, loaded by the WASM dynamic runtime host (M2-new follow-up)."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = { workspace = true }
publish       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh                         = { workspace = true }
neutrino-default-runtime-core = { workspace = true }
neutrino-runtime-core         = { workspace = true }
neutrino-runtime-abi          = { workspace = true }

[lints]
workspace = true
