[package]
name          = "neutrino-default-runtime-master"
description   = "Default-runtime master binary. Compiles to wasm32-unknown-unknown and is loaded by the WASM dynamic runtime host."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = { workspace = true }
publish       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh                         = { workspace = true }
neutrino-default-runtime-core = { workspace = true }
neutrino-runtime-core         = { workspace = true }
neutrino-runtime-abi          = { workspace = true }
neutrino-primitives           = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dlmalloc = { workspace = true, features = ["global"] }

[lints]
workspace = true
